--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YSS Patched Minecraft APKs</title>
+</head>
+
+<body>
+    <h1 style="text-align: center;">YSS Patched Minecraft APKs (fanmade mirror)</h1>
+    <p style="text-align: center; font-family: monospace;">Last updated: Oct 14, 2024</p>
+    <p style="text-align: center; font-family: monospace;">Since YSS APKs are being taken down so I decided to mirror their APKs here.</p>
+    <p style="text-align: center; font-family: monospace; color: red; font-weight: bold;">I am NOT the creator of these APKs.</p>
+    
+    <p style="text-align: center; font-family: monospace; padding-top: 15px; padding-bottom: 20px;">Useful links: <a href="https://discord.gg/yss">YSS Discord server</a> | <a href="https://yss.minecraft.pe">YSS website</a></p>
+    
+    <div style="width: 75vw; border-radius: 16px; border: 2px solid rgba(0, 0, 0, 0.25); margin: 0 auto; box-shadow: 0px 7.64px 15px rgba(0, 0, 0, 0.2); padding: 20px; box-sizing: border-box;">
+        <b style="font-size: larger;">Latest release: 1.21.30.04</b><br>
+        <p style="user-select: all;"><b style="user-select: none;">Source: </b><a href="https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o" style="font-family: monospace;">https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o</a></code></p>
+        <p style="user-select: all;"><b style="user-select: none;">SHA256: </b><code>1df24ea56b84d90a8f4957e12fe764dcc32df13b603b633e236d721588b3c101</code></p>
+        <br>
+        <a style="border-radius: 8px; background-color: green; color: white; padding: 12px 20px; text-align: center; text-decoration: none; display: inline-block;" href="https://github.com/mcpebd/yssmirror/releases/download/1.21.30/1.21.30.03_arm32_arm64_patched.apk">Download APK (295 MB)</a>
+    </div>
+    <div style="height: 50px;"></div>
+    <div style="width: 75vw; border-radius: 16px; border: 2px solid rgba(0, 0, 0, 0.25); margin: 0 auto; box-shadow: 0px 7.64px 15px rgba(0, 0, 0, 0.2); padding: 20px; box-sizing: border-box;">
+        <b style="font-size: larger;">Old releases</b><br>
+        <p style="text-align: center; font-family: monospace;">hmm... nothing to see here</p>
+    </div>
+
+</body>
+
+</html>
