--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <p style="user-select: all;"><b style="user-select: none;">Source: </b><a href="https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o" style="font-family: monospace;">https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o</a></code></p>
         <p style="user-select: all;"><b style="user-select: none;">SHA256: </b><code>1df24ea56b84d90a8f4957e12fe764dcc32df13b603b633e236d721588b3c101</code></p>
         <br>
+        <!--
         <a style="border-radius: 8px; background-color: green; color: white; padding: 12px 20px; text-align: center; text-decoration: none; display: inline-block;" href="https://github.com/mcpebd/yssmirror/releases/download/1.21.30/1.21.30.03_arm32_arm64_patched.apk">Download APK (295 MB)</a>
+        -->
+        <a style="border-radius: 8px; background-color: green; color: white; padding: 12px 20px; text-align: center; text-decoration: none; display: inline-block;" href="https://youtu.be/dQw4w9WgXcQ">Download APK (295 MB)</a>
     </div>
     <div style="height: 50px;"></div>
     <div style="width: 75vw; border-radius: 16px; border: 2px solid rgba(0, 0, 0, 0.25); margin: 0 auto; box-shadow: 0px 7.64px 15px rgba(0, 0, 0, 0.2); padding: 20px; box-sizing: border-box;">
