--- a/index.html
+++ b/index.html
@@ -5,71 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YSS Patched Minecraft APKs</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-            }
-            .version {
-                width: 75vw; 
-                border-radius: 16px; 
-                border: 2px solid rgba(0, 0, 0, 0.25); 
-                margin: 0 auto; 
-                box-shadow: 0px 7.64px 15px rgba(0, 0, 0, 0.2); 
-                padding: 20px; 
-                box-sizing: border-box;
-                margin-bottom:100px
-            }
-            code {
-                user-select: all;
-            }
-            .p2 {
-            text-align: center; 
-            font-family: monospace;
-            }
-            .dl {
-                border-radius: 8px; 
-                background-color: green; 
-                color: white; 
-                padding: 12px 20px; 
-                text-align: center; 
-                text-decoration: none; 
-                display: inline-block;
-            }
-            hr {
-                margin-top: 2em;
-                margin-bottom: 2em;
-            }
+    <style>
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
-<body>
-    <h1 style="text-align: center;">YSS Patched Minecraft APKs (fanmade mirror)</h1>
-    <p class=p2>Last updated: Oct 21, 2024</p>
-    <p class=p2>Since YSS APKs are being taken down so I decided to mirror their APKs here.</p>
-    <p class=p2 style="color: red; font-weight: bold;">I am NOT the creator of these APKs.</p>
-    <p class=p2 style="margin-bottom:50px;">Useful links: <a href="https://discord.gg/yss">YSS Discord server</a> | <a href="https://yss.minecraft.pe">YSS website</a></p>
-    
-    <div class=version>
-        <strong style="font-size: 1.764em;">Latest release</strong>
-        <p style="font-size: larger; font-weight: bold;">1.21.30.04</p>
-        <p><b>Source: </b><code><a href="https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o">https://mega.nz/file/PYI1lB4I#3eDXi1gt2Zlpsgi3RKdlr0o9IjHc6s7r0USQyBTLJ7o</a></code></p>
-        <p><b>SHA256: </b><code>1df24ea56b84d90a8f4957e12fe764dcc32df13b603b633e236d721588b3c101</code></p>
-        <br>
-        <a class=dl href="https://github.com/mcpebd/yssmirror/releases/download/1.21.30/1.21.30.03_arm32_arm64_patched.apk">1.21.30.03_arm32_arm64_patched.apk (295 MB)</a>
-    </div>
-
-    <div class=version>
-        <strong style="font-size: 1.764em;">Old releases</strong>
-        <p style="font-size: larger; font-weight: bold;">1.21.1.03</p>
-        <p><b>Source: </b><code>yss.minecraft.pe -> mediafire</code></p>
-        <p><b>SHA256: </b><code>07e2753f3b419a0e551e2be7ad6bb443aaa7ae0ca32d2e033cd99bd5b969f09c</code></p>
-        <br>
-        <a class=dl href="https://github.com/mcpebd/yssmirror/releases/download/1.21.1/1.21.1.03_arm32_arm64_patched.apk">1.21.1.03_arm32_arm64_patched.apk (320 MB)</a>
+<body style="display:flex; flex-direction: column; font-family: sans-serif;">
+    <h1>YSS Patched Minecraft APKs (fanmade mirror)</h1>
+    <p>Last updated: Dec 03, 2024</p>
+    <p>Since YSS APKs are being taken down so I decided to mirror their APKs here.</p>
+    <p style="color: red; font-weight: bold;">I am NOT the creator of these APKs.</p>
+    <pstyle="margin-bottom:50px;">Useful links: <a href="https://discord.gg/yss">YSS Discord server</a> | <a
+            href="https://yss.minecraft.pe">YSS website</a></p>
+        <h2>1.21</h2>
         <hr>
-        <p style="text-align: center; font-family: monospace;">hmm... nothing to see here</p>
-    </div>
+        <p>
+            <a
+                href="https://github.com/mcpebd/yssmirror/releases/download/1.21.44/1.21.44.01_arm32_arm64_patched.apk">1.21.44.01_arm32_arm64_patched.apk</a>
+            <br>
+            <code>SHA256: 542fc5d9a997a5c8678e4ada4c40cd916da4db572a0435b69f0023a2efc63dd1</code>
+        </p>
 
+        <p>
+            <a
+                href="https://github.com/mcpebd/yssmirror/releases/download/1.21.30/1.21.30.03_arm32_arm64_patched.apk">1.21.30.03_arm32_arm64_patched.apk</a>
+            <br>
+            <code>SHA256: 1df24ea56b84d90a8f4957e12fe764dcc32df13b603b633e236d721588b3c101</code>
+        </p>
+
+        <p>
+            <a
+                href="https://github.com/mcpebd/yssmirror/releases/download/1.21.1/1.21.1.03_arm32_arm64_patched.apk">1.21.1.03_arm32_arm64_patched.apk</a>
+            <br>
+            <code>SHA256: 07e2753f3b419a0e551e2be7ad6bb443aaa7ae0ca32d2e033cd99bd5b969f09c</code>
+        </p>
 </body>
 
 </html>
-
