--- a/index.html
+++ b/index.html
@@ -5,20 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Data Viewer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .table-container {
-            margin-top: 30px;
-        }
-        .table th, .table td {
-            vertical-align: middle;
-        }
-    </style>
 </head>
 <body>
-    <div class="container table-container">
+    <div class="container mt-5">
         <h1 class="text-center mb-4">APK Files with SHA256</h1>
         <div id="json-table" class="table-responsive"></div>
     </div>
@@ -29,7 +18,15 @@
             .then(response => response.json())
             .then(data => {
                 const jsonTable = document.getElementById('json-table');
-                let tableHTML = `<table class="table table-bordered table-striped">
+                let tableHTML = '';
+
+                // Loop through the JSON data to build table rows
+                Object.keys(data).forEach(version => {
+                    // Add a version heading
+                    tableHTML += `<h2>${version}</h2>`;
+                    
+                    // Create the table for each version
+                    tableHTML += `<table class="table table-bordered table-striped">
                                     <thead class="thead-dark">
                                         <tr>
                                             <th>Name</th>
@@ -39,8 +36,6 @@
                                     </thead>
                                     <tbody>`;
 
-                // Loop through the JSON data to build table rows
-                Object.keys(data).forEach(version => {
                     data[version].forEach(item => {
                         tableHTML += `<tr>
                                         <td>${item.name}</td>
@@ -48,9 +43,10 @@
                                         <td>${item.sha256}</td>
                                     </tr>`;
                     });
+
+                    tableHTML += `</tbody></table>`;
                 });
 
-                tableHTML += `</tbody></table>`;
                 jsonTable.innerHTML = tableHTML;
             })
             .catch(error => {
